--- a/style.css
+++ b/style.css
@@ -19,3 +19,18 @@
     left: 190px;
     z-index: 1000000;
 }
+.block{
+    width: 400px;
+    height: 20px;
+    background-color: black;
+    position: relative;
+    top: 100px;
+    margin-top: -20px;
+}
+.hole{
+    width: 40px;
+    height: 20px;
+    background-color: white;
+    position: relative;
+    top: 100px;
+}
